--- a/app/components/header/nav.html
+++ b/app/components/header/nav.html
@@ -46,12 +46,12 @@
                     <p class="phone">+62 81289826272</p>
                     <p class="email">btbtourism@gmail.com</p>
                 </div>
-                <a class="profile-head-icon" href="javascript:void(0);"></a>
+                <a class="profile-head__edit" href="javascript:void(0);"></a>
             </div>
             <a class="profile-item" href="javascript:void(0);">Change Password</a>
             <a class="profile-item" href="javascript:void(0);">Change Phone Number</a>
-            <a class="profile-item" href="javascript:void(0);">Terms of Service</a>
-            <a class="profile-item" href="javascript:void(0);">Privacy Policy</a>
+            <a class="profile-item" href="./terms-conditions.html">Terms of Service</a>
+            <a class="profile-item" href="./privacy-policy.html">Privacy Policy</a>
             <a class="profile-item" href="javascript:void(0);">Log Out</a>
         </form>
     </li>
