--- a/app/components/modal/modal.html
+++ b/app/components/modal/modal.html
@@ -16,7 +16,7 @@
                     <div id="forget-tab-phone" class="tab-pane tab-body active">
                         <div class="ipt-warpper">
                             <div class="addon">
-                                <i></i>
+                                <i class="icon icon-phone2"></i>
                                 <span>ID +62</span>
                             </div>
                             <div class="ipt">
@@ -29,7 +29,7 @@
                     <div id="forget-tab-email" class="tab-pane tab-body">
                         <div class="ipt-warpper">
                             <div class="addon">
-                                <i></i>
+                                <i class="icon icon-email"></i>
                             </div>
                             <div class="ipt">
                                 <input type="text" placeholder="Your Email Address">
@@ -43,7 +43,7 @@
             <div class="or">or</div>
             <button type="button" class="btn-fb">
                 <span>Connect with Facebook</span>
-                <i class="icon-fb"></i>
+                <i class="icon icon-fb"></i>
             </button>
             <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close">
                 Cancel
@@ -76,19 +76,25 @@
         <div class="modal-content modal-content__forget-3">
             <h4 class="head">Input Your Verification Code</h4>
             <div class="ipt-warpper">
-                <div class="addon">
-                    <i></i>
+                <div class="addon-before">
+                    <i class="icon icon-lock2"></i>
                 </div>
                 <div class="ipt">
                     <input type="text" placeholder="Set Password">
                 </div>
+                <div class="addon-after">
+                    <a href="javascript:void(0);" class="icon icon-eye off"></a>
+                </div>
             </div>
             <div class="ipt-warpper">
-                <div class="addon">
-                    <i></i>
+                <div class="addon-before">
+                    <i class="icon icon-lock2"></i>
                 </div>
                 <div class="ipt">
                     <input type="text" placeholder="Confirm Password">
+                </div>
+                <div class="addon-after">
+                    <a href="javascript:void(0);" class="icon icon-eye"></a>
                 </div>
             </div>
             <div class="btn-reset">
@@ -116,7 +122,7 @@
                     <div id="reg-tab-phone" class="tab-pane tab-body active">
                         <div class="ipt-warpper">
                             <div class="addon">
-                                <i></i>
+                                <i class="icon icon-phone2"></i>
                                 <span>ID +62</span>
                             </div>
                             <div class="ipt">
@@ -129,7 +135,7 @@
                     <div id="reg-tab-email" class="tab-pane tab-body">
                         <div class="ipt-warpper">
                             <div class="addon">
-                                <i></i>
+                                <i class="icon icon-email"></i>
                             </div>
                             <div class="ipt">
                                 <input type="text" placeholder="Your Email Address">
@@ -143,7 +149,7 @@
             <div class="or">or</div>
             <button type="button" class="btn-fb">
                 <span>Connect with Facebook</span>
-                <i class="icon-fb"></i>
+                <i class="icon icon-fb"></i>
             </button>
             <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close">
                 Cancel
@@ -174,27 +180,29 @@
 <div class="modal" id="reg-3" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content modal-content__reg-3">
-            <div class="head"></div>
+            <div class="head">
+                <i class="icon icon-upload-pic"></i>
+            </div>
             <div class="ipt-warpper">
                 <div class="addon-before">
-                    <i></i>
+                    <i class="icon icon-lock2"></i>
                 </div>
                 <div class="ipt">
                     <input type="text" placeholder="Set Password">
                 </div>
                 <div class="addon-after">
-                    <i></i>
+                    <a href="javascript:void(0);" class="icon icon-eye"></a>
                 </div>
             </div>
             <div class="ipt-warpper">
                 <div class="addon-before">
-                    <i></i>
+                    <i class="icon icon-lock2"></i>
                 </div>
                 <div class="ipt">
                     <input type="text" placeholder="Confirm Password">
                 </div>
                 <div class="addon-after">
-                    <i></i>
+                    <a href="javascript:void(0);" class="icon icon-eye off"></a>
                 </div>
             </div>
             <div class="btn-reset">
