--- a/app/components/best-choice/best-choice.html
+++ b/app/components/best-choice/best-choice.html
@@ -20,6 +20,150 @@
                 </div>
             </div>
         </li>
+        <li class="item">
+            <div class="inner">
+                <div class="pic">
+                    <a href="./product-details.html">
+                        <img src="../../assets/img/mm10.jpg" alt="">
+                    </a>
+                </div>
+                <div class="txt">
+                    <h3>Marriot Hotel Bali Marriot Hotel Bali Marriot Hotel Bali</h3>
+                    <p>
+                        <a href="javascript:void(0);">Booking Via Website</a>
+                    </p>
+                    <p><span>Rp. 450,000</span></p>
+                </div>
+            </div>
+        </li>
+        <li class="item">
+            <div class="inner">
+                <div class="pic">
+                    <a href="./product-details.html">
+                        <img src="../../assets/img/mm10.jpg" alt="">
+                    </a>
+                </div>
+                <div class="txt">
+                    <h3>Marriot Hotel Bali Marriot Hotel Bali Marriot Hotel Bali</h3>
+                    <p>
+                        <a href="javascript:void(0);">Booking Via Website</a>
+                    </p>
+                    <p><span>Rp. 450,000</span></p>
+                </div>
+            </div>
+        </li>
+        <li class="item">
+            <div class="inner">
+                <div class="pic">
+                    <a href="./product-details.html">
+                        <img src="../../assets/img/mm10.jpg" alt="">
+                    </a>
+                </div>
+                <div class="txt">
+                    <h3>Marriot Hotel Bali Marriot Hotel Bali Marriot Hotel Bali</h3>
+                    <p>
+                        <a href="javascript:void(0);">Booking Via Website</a>
+                    </p>
+                    <p><span>Rp. 450,000</span></p>
+                </div>
+            </div>
+        </li>
+        <li class="item">
+            <div class="inner">
+                <div class="pic">
+                    <a href="./product-details.html">
+                        <img src="../../assets/img/mm10.jpg" alt="">
+                    </a>
+                </div>
+                <div class="txt">
+                    <h3>Marriot Hotel Bali Marriot Hotel Bali Marriot Hotel Bali</h3>
+                    <p>
+                        <a href="javascript:void(0);">Booking Via Website</a>
+                    </p>
+                    <p><span>Rp. 450,000</span></p>
+                </div>
+            </div>
+        </li>
+        <li class="item">
+            <div class="inner">
+                <div class="pic">
+                    <a href="./product-details.html">
+                        <img src="../../assets/img/mm10.jpg" alt="">
+                    </a>
+                </div>
+                <div class="txt">
+                    <h3>Marriot Hotel Bali Marriot Hotel Bali Marriot Hotel Bali</h3>
+                    <p>
+                        <a href="javascript:void(0);">Booking Via Website</a>
+                    </p>
+                    <p><span>Rp. 450,000</span></p>
+                </div>
+            </div>
+        </li>
+        <li class="item">
+            <div class="inner">
+                <div class="pic">
+                    <a href="./product-details.html">
+                        <img src="../../assets/img/mm10.jpg" alt="">
+                    </a>
+                </div>
+                <div class="txt">
+                    <h3>Marriot Hotel Bali Marriot Hotel Bali Marriot Hotel Bali</h3>
+                    <p>
+                        <a href="javascript:void(0);">Booking Via Website</a>
+                    </p>
+                    <p><span>Rp. 450,000</span></p>
+                </div>
+            </div>
+        </li>
+        <li class="item">
+            <div class="inner">
+                <div class="pic">
+                    <a href="./product-details.html">
+                        <img src="../../assets/img/mm10.jpg" alt="">
+                    </a>
+                </div>
+                <div class="txt">
+                    <h3>Marriot Hotel Bali Marriot Hotel Bali Marriot Hotel Bali</h3>
+                    <p>
+                        <a href="javascript:void(0);">Booking Via Website</a>
+                    </p>
+                    <p><span>Rp. 450,000</span></p>
+                </div>
+            </div>
+        </li>
+        <li class="item">
+            <div class="inner">
+                <div class="pic">
+                    <a href="./product-details.html">
+                        <img src="../../assets/img/mm10.jpg" alt="">
+                    </a>
+                </div>
+                <div class="txt">
+                    <h3>Marriot Hotel Bali Marriot Hotel Bali Marriot Hotel Bali</h3>
+                    <p>
+                        <a href="javascript:void(0);">Booking Via Website</a>
+                    </p>
+                    <p><span>Rp. 450,000</span></p>
+                </div>
+            </div>
+        </li>
+        <li class="item">
+            <div class="inner">
+                <div class="pic">
+                    <a href="./product-details.html">
+                        <img src="../../assets/img/mm10.jpg" alt="">
+                    </a>
+                </div>
+                <div class="txt">
+                    <h3>Marriot Hotel Bali Marriot Hotel Bali Marriot Hotel Bali</h3>
+                    <p>
+                        <a href="javascript:void(0);">Booking Via Website</a>
+                    </p>
+                    <p><span>Rp. 450,000</span></p>
+                </div>
+            </div>
+        </li>
 
     </ul>
 </div>
