绑定商品列表、商品详情、新闻列表、新闻详情的数据

--- a/app/components/best-choice/best-choice.css
+++ b/app/components/best-choice/best-choice.css
@@ -77,3 +77,14 @@
         }
     }
 }
+
+.best-choice__loading {
+    text-align: center;
+    padding-bottom: 20px;
+    color: #ccc;
+    width: 100%;
+    display: none;
+    a {
+        color: inherit;
+    }
+}
