--- a/app/components/giant-screen/giant-screen.html
+++ b/app/components/giant-screen/giant-screen.html
@@ -1,3 +1,5 @@
 <div class="giant-screen">
-    <img src="../../assets/img/giant-screen.jpg" alt="">
+    <div class="warrpper">
+        <img src="../../assets/img/weather.png" alt="">
+    </div>
 </div>
