--- a/app/components/header/header-has-search.html
+++ b/app/components/header/header-has-search.html
@@ -1,12 +1,14 @@
 <div class="nav-container fixed-top">
 	<nav class="nav-bar">
 		<div class="nav-bar__logo">
-			BALI
+			<a href="./index.html">
+				<img src="../../assets/img/logo.png" alt="">
+			</a>
 		</div>
 		<div class="nav-bar__search">
 			<input type="text">
 			<button>
-				<i class="icon-search"></i>
+				<i class="search-icon"></i>
 			</button>
 		</div>
 		#include("../../components/header/nav.html")
