--- a/app/components/header/header-no-search.html
+++ b/app/components/header/header-no-search.html
@@ -1,7 +1,9 @@
 <div class="nav-container fixed-top">
     <nav class="nav-bar">
         <div class="nav-bar__logo">
-            BALI
+            <a href="./index.html">
+                <img src="../../assets/img/logo.png" alt="">
+            </a>
         </div>
         #include("../../components/header/nav.html")
     </nav>
