--- a/app/assets/css/base.css
+++ b/app/assets/css/base.css
@@ -1,48 +1,28 @@
-html, body {
-    height: 100%;
+@import "../../assets/css/_variable.css";
+
+@font-face {
+    font-family: 'Calibre';
+    src:url('../../assets/font/Calibre-Regular.ttf') format('truetype');
+    font-weight: 400;
+}
+@font-face {
+    font-family: 'Calibre';
+    src: url('../../assets/font/Calibre-Medium.ttf') format('truetype');
+    font-weight: 700;
+}
+@font-face {
+    font-family: 'Calibre';
+    src: url('../../assets/font/Calibre-Semibold.ttf') format('truetype');
+    font-weight: 900;
 }
 
 body{
-	min-width: 320px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    /*font-size: 15px !important;*/
-}
-
-.clearfix{
-    &:before,
-    &:after {
-        content: "";
-        display: table;
-    }
-    &:after {
-        clear: both;
-        overflow: hidden;
-    }
-}
-.mar-b-20{
-	margin-bottom: 20px;
-}
-
-.mar-b-30{
-	margin-bottom: 30px;
-}
-.font-size-30{
-    font-size: 30px;
-}
-#layout {
-    clear: both;
-    min-height: 100%;
-    height: auto !important;
-    height: 100%;
-    margin-bottom: -50px;
-    #layout_footer {
-	    height: 50px;
-	}
-}
-
-#footer {
-    clear: both;
-    position: relative;
-    height: 50px;
+    font-family: Calibre, "Helvetica Neue", Arial, sans-serif;
+    font-size: responsive;
+    lower-font-range: $minWidth;
+    upper-font-range: $maxWidth;
+    min-font-size: 14px;
+    max-font-size: 18px;
 }
