--- a/app/components/best-choice/best-choice-no-more.html
+++ b/app/components/best-choice/best-choice-no-more.html
@@ -3,245 +3,24 @@
         <h5>Our Best Choice</h5>
     </div>
     <ul class="best-choice__items clearfix">
-        <li class="item">
-            <div class="inner">
-                <div class="pic">
-                    <a href="./product-details.html">
-                        <img src="../../assets/img/mm10.jpg" alt="">
-                    </a>
-                </div>
-                <div class="txt">
-                    <h3>Marriot Hotel Bali Marriot Hotel Bali Marriot Hotel Bali</h3>
-                    <p>
-                        <a href="#">Booking Via Website</a>
-                    </p>
-                    <p><span>Rp. 450,000</span></p>
-                </div>
-            </div>
-        </li>
-        <li class="item">
-            <div class="inner">
-                <div class="pic">
-                    <a href="./product-details.html">
-                        <img src="../../assets/img/mm10.jpg" alt="">
-                    </a>
-                </div>
-                <div class="txt">
-                    <h3>Marriot Hotel Bali Marriot Hotel Bali Marriot Hotel Bali</h3>
-                    <p>
-                        <a href="#">Booking Via Website</a>
-                    </p>
-                    <p><span>Rp. 450,000</span></p>
-                </div>
-            </div>
-        </li>
-        <li class="item">
-            <div class="inner">
-                <div class="pic">
-                    <a href="./product-details.html">
-                        <img src="../../assets/img/mm10.jpg" alt="">
-                    </a>
-                </div>
-                <div class="txt">
-                    <h3>Marriot Hotel Bali Marriot Hotel Bali Marriot Hotel Bali</h3>
-                    <p>
-                        <a href="#">Booking Via Website</a>
-                    </p>
-                    <p><span>Rp. 450,000</span></p>
-                </div>
-            </div>
-        </li>
-        <li class="item">
-            <div class="inner">
-                <div class="pic">
-                    <a href="./product-details.html">
-                        <img src="../../assets/img/mm10.jpg" alt="">
-                    </a>
-                </div>
-                <div class="txt">
-                    <h3>Marriot Hotel Bali Marriot Hotel Bali Marriot Hotel Bali</h3>
-                    <p>
-                        <a href="#">Booking Via Website</a>
-                    </p>
-                    <p><span>Rp. 450,000</span></p>
-                </div>
-            </div>
-        </li>
-        <li class="item">
-            <div class="inner">
-                <div class="pic">
-                    <a href="./product-details.html">
-                        <img src="../../assets/img/mm10.jpg" alt="">
-                    </a>
-                </div>
-                <div class="txt">
-                    <h3>Marriot Hotel Bali Marriot Hotel Bali Marriot Hotel Bali</h3>
-                    <p>
-                        <a href="#">Booking Via Website</a>
-                    </p>
-                    <p><span>Rp. 450,000</span></p>
-                </div>
-            </div>
-        </li>
-        <li class="item">
-            <div class="inner">
-                <div class="pic">
-                    <a href="./product-details.html">
-                        <img src="../../assets/img/mm10.jpg" alt="">
-                    </a>
-                </div>
-                <div class="txt">
-                    <h3>Marriot Hotel Bali Marriot Hotel Bali Marriot Hotel Bali</h3>
-                    <p>
-                        <a href="#">Booking Via Website</a>
-                    </p>
-                    <p><span>Rp. 450,000</span></p>
-                </div>
-            </div>
-        </li>
-        <li class="item">
-            <div class="inner">
-                <div class="pic">
-                    <a href="./product-details.html">
-                        <img src="../../assets/img/mm10.jpg" alt="">
-                    </a>
-                </div>
-                <div class="txt">
-                    <h3>Marriot Hotel Bali Marriot Hotel Bali Marriot Hotel Bali</h3>
-                    <p>
-                        <a href="#">Booking Via Website</a>
-                    </p>
-                    <p><span>Rp. 450,000</span></p>
-                </div>
-            </div>
-        </li>
-        <li class="item">
-            <div class="inner">
-                <div class="pic">
-                    <a href="./product-details.html">
-                        <img src="../../assets/img/mm10.jpg" alt="">
-                    </a>
-                </div>
-                <div class="txt">
-                    <h3>Marriot Hotel Bali Marriot Hotel Bali Marriot Hotel Bali</h3>
-                    <p>
-                        <a href="#">Booking Via Website</a>
-                    </p>
-                    <p><span>Rp. 450,000</span></p>
-                </div>
-            </div>
-        </li>
-        <li class="item">
-            <div class="inner">
-                <div class="pic">
-                    <a href="./product-details.html">
-                        <img src="../../assets/img/mm10.jpg" alt="">
-                    </a>
-                </div>
-                <div class="txt">
-                    <h3>Marriot Hotel Bali Marriot Hotel Bali Marriot Hotel Bali</h3>
-                    <p>
-                        <a href="#">Booking Via Website</a>
-                    </p>
-                    <p><span>Rp. 450,000</span></p>
-                </div>
-            </div>
-        </li>
-        <li class="item">
-            <div class="inner">
-                <div class="pic">
-                    <a href="./product-details.html">
-                        <img src="../../assets/img/mm10.jpg" alt="">
-                    </a>
-                </div>
-                <div class="txt">
-                    <h3>Marriot Hotel Bali Marriot Hotel Bali Marriot Hotel Bali</h3>
-                    <p>
-                        <a href="#">Booking Via Website</a>
-                    </p>
-                    <p><span>Rp. 450,000</span></p>
-                </div>
-            </div>
-        </li>
-        <li class="item">
-            <div class="inner">
-                <div class="pic">
-                    <a href="./product-details.html">
-                        <img src="../../assets/img/mm10.jpg" alt="">
-                    </a>
-                </div>
-                <div class="txt">
-                    <h3>Marriot Hotel Bali Marriot Hotel Bali Marriot Hotel Bali</h3>
-                    <p>
-                        <a href="#">Booking Via Website</a>
-                    </p>
-                    <p><span>Rp. 450,000</span></p>
-                </div>
-            </div>
-        </li>
-        <li class="item">
-            <div class="inner">
-                <div class="pic">
-                    <a href="./product-details.html">
-                        <img src="../../assets/img/mm10.jpg" alt="">
-                    </a>
-                </div>
-                <div class="txt">
-                    <h3>Marriot Hotel Bali Marriot Hotel Bali Marriot Hotel Bali</h3>
-                    <p>
-                        <a href="#">Booking Via Website</a>
-                    </p>
-                    <p><span>Rp. 450,000</span></p>
-                </div>
-            </div>
-        </li>
-        <li class="item">
-            <div class="inner">
-                <div class="pic">
-                    <a href="./product-details.html">
-                        <img src="../../assets/img/mm10.jpg" alt="">
-                    </a>
-                </div>
-                <div class="txt">
-                    <h3>Marriot Hotel Bali Marriot Hotel Bali Marriot Hotel Bali</h3>
-                    <p>
-                        <a href="#">Booking Via Website</a>
-                    </p>
-                    <p><span>Rp. 450,000</span></p>
-                </div>
-            </div>
-        </li>
-        <li class="item">
-            <div class="inner">
-                <div class="pic">
-                    <a href="./product-details.html">
-                        <img src="../../assets/img/mm10.jpg" alt="">
-                    </a>
-                </div>
-                <div class="txt">
-                    <h3>Marriot Hotel Bali Marriot Hotel Bali Marriot Hotel Bali</h3>
-                    <p>
-                        <a href="#">Booking Via Website</a>
-                    </p>
-                    <p><span>Rp. 450,000</span></p>
-                </div>
-            </div>
-        </li>
-        <li class="item">
-            <div class="inner">
-                <div class="pic">
-                    <a href="./product-details.html">
-                        <img src="../../assets/img/mm10.jpg" alt="">
-                    </a>
-                </div>
-                <div class="txt">
-                    <h3>Marriot Hotel Bali Marriot Hotel Bali Marriot Hotel Bali</h3>
-                    <p>
-                        <a href="#">Booking Via Website</a>
-                    </p>
-                    <p><span>Rp. 450,000</span></p>
-                </div>
-            </div>
-        </li>
+        <!--<li class="item">-->
+            <!--<div class="inner">-->
+                <!--<div class="pic">-->
+                    <!--<a href="./product-details.html">-->
+                        <!--<img src="../../assets/img/mm10.jpg" alt="">-->
+                    <!--</a>-->
+                <!--</div>-->
+                <!--<div class="txt">-->
+                    <!--<h3>Marriot Hotel Bali Marriot Hotel Bali Marriot Hotel Bali</h3>-->
+                    <!--<p>-->
+                        <!--<a href="#">Booking Via Website</a>-->
+                    <!--</p>-->
+                    <!--<p><span>Rp. 450,000</span></p>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</li>-->
     </ul>
+    <div class="best-choice__loading">
+        Loading
+    </div>
 </div>
