--- a/app/components/header/header.css
+++ b/app/components/header/header.css
@@ -29,6 +29,11 @@
     justify-content: center;
     align-items: center;
     color: #fff;
+    img {
+        width: 40px;
+        height: 30px;
+        display: block;
+    }
 }
 .nav-bar__nav {
     list-style-type: none;
@@ -79,6 +84,7 @@
         padding-left: 8px;
         padding-right: 34px;
         color: #fff;
+        outline: 0;
     }
     button {
         position: absolute;
@@ -87,15 +93,25 @@
         height: 26px;
         background-color: rgba(255, 255, 255, 0);
         outline: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         top: 0;
         right: 0;
         margin: 0;
         padding: 0;
         border: 0;
-        .icon-search {
+        .search-icon {
             color: #fff;
             font-size: 16px;
             font-weight: 100;
+            display: block;
+            width: 16px;
+            height: 16px;
+            background-image: url("../../assets/img/icon-search.png");
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center;
         }
     }
 }
