--- a/app/components/news-list/news-list-no-more.html
+++ b/app/components/news-list/news-list-no-more.html
@@ -3,72 +3,17 @@
         <h5>News</h5>
     </div>
     <ul class="news-list__items">
-        <li class="item">
-            <div class="pic">
-                <img src="../../assets/img/mm10.jpg" alt="">
-            </div>
-            <div class="body">
-                <h5>
-                    <a href="./news-details.html">Bali volcano eruption 2017</a>
-                </h5>
-                <p>Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. </p>
-            </div>
-        </li>
-        <li class="item">
-            <div class="pic">
-                <img src="../../assets/img/mm10.jpg" alt="">
-            </div>
-            <div class="body">
-                <h5>
-                    <a href="./news-details.html">Bali volcano eruption 2017</a>
-                </h5>
-                <p>Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. </p>
-            </div>
-        </li>
-        <li class="item">
-            <div class="pic">
-                <img src="../../assets/img/mm10.jpg" alt="">
-            </div>
-            <div class="body">
-                <h5>
-                    <a href="./news-details.html">Bali volcano eruption 2017</a>
-                </h5>
-                <p>Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. </p>
-            </div>
-        </li>
-        <li class="item">
-            <div class="pic">
-                <img src="../../assets/img/mm10.jpg" alt="">
-            </div>
-            <div class="body">
-                <h5>
-                    <a href="./news-details.html">Bali volcano eruption 2017</a>
-                </h5>
-                <p>Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. </p>
-            </div>
-        </li>
-        <li class="item">
-            <div class="pic">
-                <img src="../../assets/img/mm10.jpg" alt="">
-            </div>
-            <div class="body">
-                <h5>
-                    <a href="./news-details.html">Bali volcano eruption 2017</a>
-                </h5>
-                <p>Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. </p>
-            </div>
-        </li>
-        <li class="item">
-            <div class="pic">
-                <img src="../../assets/img/mm10.jpg" alt="">
-            </div>
-            <div class="body">
-                <h5>
-                    <a href="./news-details.html">Bali volcano eruption 2017</a>
-                </h5>
-                <p>Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. </p>
-            </div>
-        </li>
-
+        <!--<li class="item">-->
+            <!--<div class="pic">-->
+                <!--<img src="../../assets/img/mm10.jpg" alt="">-->
+            <!--</div>-->
+            <!--<div class="body">-->
+                <!--<h5>-->
+                    <!--<a href="./news-details.html">Bali volcano eruption 2017</a>-->
+                <!--</h5>-->
+                <!--<p>Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. Thousands of residents living in Bali’s northeast have been forced to evacuate. Mount Agung volcano has put more than 4 million people on high alert. </p>-->
+            <!--</div>-->
+        <!--</li>-->
     </ul>
+    <div class="news-list__loading">Loading</div>
 </div>
