--- a/app/pages/about-bali/about-bali.css
+++ b/app/pages/about-bali/about-bali.css
@@ -1,3 +1,5 @@
+
+@import "../../assets/css/base.css";
 @import "../../components/header/header.css";
 @import "../../components/footer/footer.css";
 
