--- a/app/pages/about-us/about-us.css
+++ b/app/pages/about-us/about-us.css
@@ -1,3 +1,5 @@
+
+@import "../../assets/css/base.css";
 @import "../../components/header/header.css";
 @import "../../components/footer/footer.css";
 
