--- a/app/pages/index/index.css
+++ b/app/pages/index/index.css
@@ -1,4 +1,5 @@
 @import "../../assets/css/_variable.css";
+@import "../../assets/css/base.css";
 @import "../../components/header/header.css";
 @import "../../components/category/category.css";
 @import "../../components/best-choice/best-choice.css";
