--- a/app/pages/news/news.css
+++ b/app/pages/news/news.css
@@ -1,4 +1,5 @@
 @import "../../assets/css/_variable.css";
+@import "../../assets/css/base.css";
 @import "../../components/header/header.css";
 @import "../../components/giant-screen/giant-screen.css";
 @import "../../components/category/category.css";
