--- a/app/pages/product-details/product-details.css
+++ b/app/pages/product-details/product-details.css
@@ -1,8 +1,19 @@
 @import "../../assets/css/_variable.css";
+@import "../../assets/css/base.css";
 @import "../../components/header/header.css";
 @import "../../components/giant-screen/giant-screen.css";
 @import "../../components/category/category.css";
 @import "../../components/footer/footer.css";
+
+html, body {
+    height: 100%;
+}
+
+.layer-warpper {
+    min-height: 100%;
+    margin-bottom: -30px;
+    padding-bottom: 30px;
+}
 
 .product-container {
     padding-top: 40px;
@@ -13,7 +24,28 @@
     width: 720px;
     height: 360px;
     margin: 0 auto;
+    position: relative;
     background-color: #eee;
+    .video {
+        width: 100%;
+        height: 100%;
+        display: block;
+        object-fit: fill;
+    }
+    .play {
+        display: block;
+        width: 50px;
+        height: 35px;
+        background-image: url("../../assets/img/youtube-play.png");
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-left: -25px;
+        margin-top: -18px;
+    }
 }
 
 .product__head {
