--- a/app/pages/news-details/news-details.css
+++ b/app/pages/news-details/news-details.css
@@ -39,16 +39,18 @@ html, body {
 .news-details__body {
     flex-grow: 1;
     margin-left: 5%;
+    font-size: 15px;
     color: rgb(74, 74, 74);
     .tit {
         font-size: 20px;
         margin-bottom: 15px;
+        font-weight: 700;
     }
     .subtit {
-        font-size: 14px;
+        font-size: 16px;
     }
     .date {
-        font-size: 14px;
+        font-size: 16px;
     }
 }
 
